# basic_arcade

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
cmake_example/: CMakeLists.example.txt
cmake_files/: cmake_unix.txt  cmake_windows.txt
src/: constants.h  main.c
src/engine/: array_list.h  constants.h  controller.c  controller.h  physics.c  physics.h  player.c  player.h  projectile.c  projectile.h  renderer.c  renderer.h  window.c  window.h
src/game/: controller.c  controller.h  player.c  player.h  projectile.h  renderer.h  window.c  window.h
